[package]
authors = ["The Nu Project Contributors"]
description = "CLI for nushell"
edition = "2018"
license = "MIT"
name = "nu-data"
version = "0.33.1"

[lib]
doctest = false

[dependencies]
bigdecimal = "0.2.0"
byte-unit = "4.0.9"
chrono = "0.4.19"
common-path = "1.0.0"
derive-new = "0.5.8"
directories-next = "2.0.0"
dirs-next = "2.0.0"
getset = "0.1.1"
indexmap = { version="1.6.1", features=["serde-1"] }
log = "0.4.14"
num-bigint = { version="0.3.1", features=["serde"] }
num-format = "0.4.0"
num-traits = "0.2.14"
query_interface = "0.3.5"
serde = { version="1.0.123", features=["derive"] }
sha2 = "0.9.3"
sys-locale = "0.1.0"
toml = "0.5.8"

nu-errors = { version="0.33.1", path="../nu-errors" }
nu-protocol = { version="0.33.1", path="../nu-protocol" }
nu-source = { version="0.33.1", path="../nu-source" }
nu-table = { version="0.33.1", path="../nu-table" }
nu-test-support = { version="0.33.1", path="../nu-test-support" }
nu-value-ext = { version="0.33.1", path="../nu-value-ext" }
nu-ansi-term = { version="0.33.1", path="../nu-ansi-term" }

[dependencies.polars]
version = "0.14.5"
optional = true
features = ["strings", "checked_arithmetic"]

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[features]
dataframe = ["nu-protocol/dataframe", "polars"]
