[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's evaluation engine"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-engine"
edition = "2024"
license = "MIT"
name = "nu-engine"
version = "0.108.1"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.108.1", default-features = false }
nu-experimental = { path = "../nu-experimental", version = "0.108.1" }
nu-path = { path = "../nu-path", version = "0.108.1" }
nu-glob = { path = "../nu-glob", version = "0.108.1" }
nu-utils = { path = "../nu-utils", version = "0.108.1", default-features = false }
fancy-regex = { workspace = true }
log = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]
