[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's evaluation engine"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-engine"
edition.workspace = true
license = "MIT"
name = "nu-engine"
rust-version.workspace = true
version = "0.112.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.112.2", default-features = false }
nu-experimental = { path = "../nu-experimental", version = "0.112.2" }
nu-path = { path = "../nu-path", version = "0.112.2" }
nu-glob = { path = "../nu-glob", version = "0.112.2" }
nu-utils = { path = "../nu-utils", version = "0.112.2", default-features = false }
fancy-regex = { workspace = true }
log = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]
