[package]
authors.workspace = true
description = "Nushell's evaluation engine"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-engine"
edition.workspace = true
license.workspace = true
name = "nu-engine"
rust-version.workspace = true
version.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol.workspace = true
nu-experimental.workspace = true
nu-path.workspace = true
nu-glob.workspace = true
nu-utils.workspace = true
fancy-regex = { workspace = true }
log = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]
