[package]
authors = ["The Nu Project Contributors"]
description = "Core error subsystem for Nushell"
edition = "2018"
license = "MIT"
name = "nu-errors"
version = "0.27.1"

[lib]
doctest = false

[dependencies]
nu-source = { path = "../nu-source", version = "0.27.1" }
nu-ansi-term = { version = "0.27.1", path = "../nu-ansi-term" }

bigdecimal = { version = "0.2.0", features = ["serde"] }
codespan-reporting = { version = "0.11.0", features = ["serialization"] }
derive-new = "0.5.8"
getset = "0.1.1"
num-bigint = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.14"
serde = { version = "1.0.123", features = ["derive"] }

# implement conversions
glob = "0.3.0"
serde_json = "1.0.61"
serde_yaml = "0.8.16"
toml = "0.5.8"

[build-dependencies]
