[package]
authors = ["The Nushell Project Developers"]
description = "Nushell experimental options"
edition = "2024"
license = "MIT"
name = "nu-experimental"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-experimental"
version = "0.106.2"

[dependencies]
itertools.workspace = true
thiserror.workspace = true
