[package]
authors = ["The Nushell Project Developers"]
description = "Nushell experimental options"
edition.workspace = true
license = "MIT"
name = "nu-experimental"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-experimental"
rust-version.workspace = true
version = "0.112.1"

[dependencies]
itertools.workspace = true
thiserror.workspace = true
