[package]
authors.workspace = true
description = "Nushell experimental options"
edition.workspace = true
license.workspace = true
name = "nu-experimental"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-experimental"
rust-version.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
thiserror.workspace = true
