[package]
authors = ["The Nushell Project Developers"]
description = "Nushell table pager"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-explore"
edition = "2024"
license = "MIT"
name = "nu-explore"
version = "0.111.1"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.111.1" }
nu-parser = { path = "../nu-parser", version = "0.111.1" }
nu-path = { path = "../nu-path", version = "0.111.1" }
nu-color-config = { path = "../nu-color-config", version = "0.111.1" }
nu-engine = { path = "../nu-engine", version = "0.111.1" }
nu-table = { path = "../nu-table", version = "0.111.1" }
nu-json = { path = "../nu-json", version = "0.111.1" }
nu-utils = { path = "../nu-utils", version = "0.111.1" }
nu-ansi-term = { workspace = true }
nu-pretty-hex = { path = "../nu-pretty-hex", version = "0.111.1" }

ansi-str = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
fancy-regex = { workspace = true }
log = { workspace = true }
lscolors = { workspace = true, default-features = false, features = [
    "nu-ansi-term",
] }
ratatui = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
strip-ansi-escapes = { workspace = true }
edtui = { version = "0.11.1", default-features = false, features = [
    "system-editor",
] }
tui-tree-widget = "0.24"
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(any(windows, target_os = "macos", target_os = "linux"))'.dependencies]
edtui = { version = "0.11.1", default-features = false, features = ["system-editor", "arboard"] }
