[package]
authors.workspace = true
description = "Nushell table pager"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-explore"
edition.workspace = true
license.workspace = true
name = "nu-explore"
rust-version.workspace = true
version.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { workspace = true, features = ["os"] }
nu-path.workspace = true
nu-parser.workspace = true
nu-color-config.workspace = true
nu-engine = { workspace = true, features = ["os"] }
nu-table.workspace = true
nu-json.workspace = true
nu-utils.workspace = true
nu-ansi-term.workspace = true
nu-pretty-hex.workspace = true

ansi-str = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
fancy-regex = { workspace = true }
log = { workspace = true }
lscolors = { workspace = true, default-features = false, features = [
    "nu-ansi-term",
] }
ratatui = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
strip-ansi-escapes = { workspace = true }
edtui = { version = "0.11.2", default-features = false, features = [
    "system-editor",
] }
tui-tree-widget = "0.24"
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(any(windows, target_os = "macos", target_os = "linux"))'.dependencies]
edtui = { version = "0.11.2", default-features = false, features = ["system-editor", "arboard"] }
