[package]
name = "nu-glob"
version = "0.103.0"
authors = ["The Nushell Project Developers", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
description = """
Fork of glob. Support for matching file paths against Unix shell style patterns.
"""
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-glob"
edition = "2021"
categories = ["filesystem"]

[lib]
bench = false

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.103.0", default-features = false }

[dev-dependencies]
doc-comment = "0.3"

[lints]
workspace = true