[package]
name = "nu-glob"
version = "0.108.1"
authors = ["The Nushell Project Developers", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
description = """
Fork of glob. Support for matching file paths against Unix shell style patterns.
"""
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-glob"
edition = "2024"
categories = ["filesystem"]

[lib]
bench = false

[dependencies]

[dev-dependencies]
doc-comment = "0.3"

[lints]
workspace = true
