[package]
name = "nu-glob"
version.workspace = true
authors.workspace = true
license.workspace = true
description = """
Fork of glob. Support for matching file paths against Unix shell style patterns.
"""
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-glob"
edition.workspace = true
rust-version.workspace = true
categories = ["filesystem"]

[lib]
bench = false

[dependencies]

[dev-dependencies]
doc-comment = "0.3"

[lints]
workspace = true
