[package]
name = "nu-heavy-utils"
description = "Nushell utility types and functions with heavier dependencies"
authors.workspace = true
license.workspace = true
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-heavy-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[lib]
bench = false
harness = false

[lints]
workspace = true

[dependencies]
nu-protocol.workspace = true

[dev-dependencies]
nu-test-support.workspace = true
