[package]
name = "nu-heavy-utils"
description = "Nushell utility types and functions with heavier dependencies"
authors.workspace = true
license.workspace = true
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-heavy-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[lib]
bench = false
harness = false

[lints]
workspace = true

[features]
default = ["endian", "merge"]

endian = []
merge = []

[dependencies]
nu-protocol.workspace = true

derive_setters.workspace = true
granit-parser.workspace = true
regex.workspace = true
serde-saphyr.workspace = true

# TODO: remove after testing yaml impl
nu-json = { workspace = true, features = ["default", "nu-protocol"] }
serde_json.workspace = true

[dev-dependencies]
nu-test-support = { path = "../nu-test-support" }
