[package]
name = "nu-heavy-utils"
description = "Nushell utility types and functions with heavier dependencies"
authors.workspace = true
license.workspace = true
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-heavy-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[lib]
bench = false
harness = false

[lints]
workspace = true

[features]
default = ["endian", "merge", "yaml"]

endian = []
merge = []
yaml = [
  "dep:base64",
  "dep:better_default",
  "dep:chrono",
  "dep:derive_setters",
  "dep:pastey",
  "dep:regex",
  "dep:scopeguard",
  "dep:serde-saphyr",
  "dep:serde",
  "dep:strum",
]

[dependencies]
nu-protocol.workspace = true
nu-utils.workspace = true

base64 = { workspace = true, optional = true }
better_default = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
derive_setters = { workspace = true, optional = true }
pastey = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
scopeguard = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde-saphyr = { workspace = true, optional = true }
strum = { workspace = true, optional = true }

[dev-dependencies]
nu-test-support.path = "../nu-test-support"

indoc.workspace = true
miette.workspace = true
rstest.workspace = true
