[package]
authors = [
    "The Nushell Project Developers",
    "Christian Zangl <laktak@cdak.net>",
]
description = "Fork of serde-hjson"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-json"
edition = "2024"
license = "MIT"
name = "nu-json"
version = "0.105.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl"]
default = ["preserve_order"]

[dependencies]
linked-hash-map = { version = "0.5", optional = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nu-utils = { path = "../nu-utils", version = "0.105.2", default-features = false }

[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.105.2" }
nu-path = { path = "../nu-path", version = "0.105.2" }
serde_json = "1.0"
fancy-regex = "0.14.0"
pretty_assertions = { workspace = true }
rstest = { workspace = true, default-features = false }

[lints]
workspace = true
