[package]
authors = [
    "The Nushell Project Developers",
    "Christian Zangl <laktak@cdak.net>",
]
description = "Fork of serde-hjson"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-json"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
name = "nu-json"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl", "serde_json/preserve_order"]
default = ["preserve_order"]

[dependencies]
nu-utils.workspace = true
nu-protocol = { workspace = true, optional = true }

linked-hash-map = { version = "0.5", optional = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nu-test-support.workspace = true
nu-path.workspace = true

serde_json = "1.0"
fancy-regex = "0.18.0"
pretty_assertions = { workspace = true }
rstest = { workspace = true, default-features = false }

[lints]
workspace = true
