[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's integrated LSP server"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-lsp"
name = "nu-lsp"
version = "0.112.2"
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[dependencies]
nu-cli = { path = "../nu-cli", version = "0.112.2" }
nu-glob = { path = "../nu-glob", version = "0.112.2" }
nu-parser = { path = "../nu-parser", version = "0.112.2" }
nu-protocol = { path = "../nu-protocol", version = "0.112.2" }
nu-utils = { path = "../nu-utils", version = "0.112.2" }

crossbeam-channel = { workspace = true }
fancy-regex = { workspace = true }
lsp-server = { workspace = true }
lsp-textdocument = { workspace = true }
lsp-types = { workspace = true }
memchr = { workspace = true }
miette = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang" }
nu-command = { path = "../nu-command" }
nu-engine = { path = "../nu-engine" }
nu-std = { path = "../nu-std" }
nu-test-support = { path = "../nu-test-support" }

assert-json-diff = "2.0"
rstest = { workspace = true, default-features = false }

[lints]
workspace = true
