[package]
authors.workspace = true
description = "Nushell's integrated LSP server"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-lsp"
name = "nu-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nu-cli.workspace = true
nu-glob.workspace = true
nu-parser.workspace = true
nu-protocol.workspace = true
nu-utils.workspace = true

crossbeam-channel = { workspace = true }
fancy-regex = { workspace = true }
lsp-server = { workspace = true }
lsp-textdocument = { workspace = true }
lsp-types = { workspace = true }
memchr = { workspace = true }
miette = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-engine.workspace = true
nu-std.workspace = true
nu-test-support.workspace = true

assert-json-diff = "2.0"
rstest = { workspace = true, default-features = false }

[lints]
workspace = true
