[package]
name = "nu-macros"
version = "0.8.0"
authors = ["Yehuda Katz <wycats@gmail.com>", "Jonathan Turner <jonathan.d.turner@gmail.com>", "Andrés N. Robalino <andres@androbtech.com>"]
edition = "2018"
description = "Core macros for building Nushell"
license = "MIT"

[lib]
doctest = false

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.8.0" }
