[package]
name = "nu-mcp"
version = "0.111.0"
edition = "2024"
authors = ["The Nushell Project Developers"]
description = "Modules to run a model context protocol (MCP) server that provides Nushell as a tool."
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-mcp"
homepage = "https://www.nushell.sh"
license = "MIT"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["process"] }

[dependencies]
futures = "0.3.31"
miette = { workspace = true }
nu-protocol = { path = "../nu-protocol", version = "0.111.0", features = ["plugin"] }
nu-engine = { path = "../nu-engine", version = "0.111.0" }
nu-parser = { path = "../nu-parser", version = "0.111.0" }

rmcp = { version = "0.16", features = ["server", "transport-io", "schemars", "transport-streamable-http-server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
bytes = { workspace = true }
indoc = "2.0.7"
nuon = { path = "../nuon", version = "0.111.0" }
chrono = { workspace = true }

[features]
default = []
mcp = []

[lints]
workspace = true

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.111.0" }
