[package]
name = "nu-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Modules to run a model context protocol (MCP) server that provides Nushell as a tool."
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-mcp"
homepage = "https://www.nushell.sh"
license.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["process"] }

[dependencies]
futures = "0.3.31"
miette = { workspace = true }
nu-protocol = { workspace = true, features = ["plugin"] }
nu-engine = { workspace = true, features = ["plugin"] }
nu-parser.workspace = true
nuon.workspace = true

rmcp = { version = "1.7.0", features = ["server", "transport-io", "schemars", "transport-streamable-http-server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
bytes = { workspace = true }
indoc = "2.0.7"
chrono = { workspace = true }

[features]
default = []
mcp = []

[lints]
workspace = true

[dev-dependencies]
nu-cmd-lang = { workspace = true, features = ["os"] }
