[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's parser"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-parser"
edition = "2021"
license = "MIT"
name = "nu-parser"
version = "0.92.3"
exclude = ["/fuzz"]

[lib]
bench = false

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.92.3" }
nu-path = { path = "../nu-path", version = "0.92.3" }
nu-plugin = { path = "../nu-plugin", optional = true, version = "0.92.3" }
nu-protocol = { path = "../nu-protocol", version = "0.92.3" }

bytesize = { workspace = true }
chrono = { default-features = false, features = ['std'], workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true, default-features = false }

[features]
plugin = ["nu-plugin"]
