[package]
authors.workspace = true
description = "Nushell's parser"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-parser"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
name = "nu-parser"
version.workspace = true
exclude = ["/fuzz"]

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine.workspace = true
nu-path.workspace = true
nu-plugin-engine = { workspace = true, optional = true }
nu-protocol.workspace = true
nu-utils.workspace = true
nu-experimental.workspace = true

bytesize = { workspace = true }
chrono = { default-features = false, features = ['std'], workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true, default-features = false }

[features]
plugin = ["nu-plugin-engine", "nu-engine/plugin"]
